# base-flower-1261

./: .gitignore  README.md  methods.md  pyproject.toml
experiments/: fedavg_baseline.toml  fedavg_lora_diag.toml  fedavg_lora_plain.toml  runs.txt
flcore/: __init__.py  client_app.py  config.py  data.py  model.py  server_app.py  train_eval.py
flcore/lora/: __init__.py  methods.py  modules.py
papers/additional-bib/: paper_deep_review.md  paper_theory_proof_focus.md
run/: 09-cifar10-cnn-runs.txt  09-direct-runs.sh  09-method-partitions.sh  11-fedavg.sh  config_tools.py  download_papers.sh  lora-test.sh  run_experiment.sh
scripts/: run_experiment.sh  run_parallel.sh
